pipelines_implementation/manifests/fruit-management-prod/fm-svc-green.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fruit-management-green
  name: fruit-management-green
spec:
  ports:
    - name: "8080"
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
  selector:
    app: fruit-management-green
    deploymentconfig: fruit-management-green
  sessionAffinity: None
  type: ClusterIP
